tests/baselines/reference/parserModuleDeclaration11(strict=true).errors.txt
parserModuleDeclaration11.ts(3,21): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserModuleDeclaration11.ts (1 errors) ====
    declare module string {
        interface X { }
        export function foo(s: string);
                        ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    string.foo("abc");
    var x: string.X;
    